# ble-smoke-detector

./: .gitignore  CMakeLists.txt  ble-smoke-detector.ino  ble_smoke_detector.gatt  btstack_config.h  license.md  main.cpp  readme-picow.md  readme-xiao-esp32c3.md  readme.md
BLE/: BleConnection.cpp  BleConnection.h  BleConnectionTracker.cpp  BleConnectionTracker.h
CircularBuffer/: CircularBuffer.h  Debugging.cpp  Debugging.h
Packet/: Base.cpp  Base.h  BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  Message.cpp  Message.h  PacketBase.cpp  PacketBase.h  PacketTypes.h  Peer.cpp  Peer.h  ProtocolWriter.cpp  ProtocolWriter.h
include/: ble_types.h  int_types.h
src/: Announce.cpp  Announce.h  Base.cpp  Base.h  BinaryReader.cpp  BinaryReader.h  BinaryWriter.h  BleConnection.cpp  BleConnection.h  BleConnectionTracker.cpp  BleConnectionTracker.h  Debugging.cpp  Debugging.h  Message.cpp  Message.h  PacketBase.cpp  PacketBase.h  PacketTypes.h  Peer.cpp  Peer.h  ProtocolProcessor.cpp  ProtocolProcessor.h
test/: CMakeLists.txt  packet_repeater_mocks.h  pico_pi_mocks.cpp  pico_pi_mocks.h  test_ble_smoke_detector.cpp  test_circular_buffer.cpp
